--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is the body of the html document</p>
+    <p>This here is the body of the document</p>
 </body>
 </html>
