--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <p>This here is the body of the document</p>
+    <table>
+        <tr>
+            <td>
+                this is smt
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
